--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "estimate-repo": "./src/index.js"
   },
   "scripts": {
+    "start": "node src/index.js",
     "clean": "rm -rf dist",
     "bundle": "esbuild src/index.js --bundle --platform=node --format=cjs --outfile=dist/bundle.cjs --banner:js='#!/usr/bin/env node'",
     "build": "npm run clean && npm run build:linux",
